<resources>
    <string name="app_name">Coordinates</string>
    <string name="get_coordinates">Get Coordinates</string>
    <string name="view_coordinates">View Coordinates</string>
    <string name="delete_coordinates">Delete Coordinates</string>
    <string name="view_map">View Map</string>
    <string name="map_key" translatable="false"> AIzaSyCj6eqnGp0kyyxOETZCxttKCG0tpU_QBQ8 </string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="view_branding">View Branding</string>
    <string name="view_final_coordinates">View Final Coordinates</string>
    <string name="delete_final_coordinates">Delete Final Coordinates</string>
    <string name="cluster_locations">Cluster Locations</string>
    <string name="add_name">Add Name</string>
    <string name="add">Add</string>
    <string name="Search">Search</string>
</resources>
